[gd_scene load_steps=13 format=2]

[ext_resource path="res://Asset/Circle.png" type="Texture" id=1]
[ext_resource path="res://Script/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Asset/Bulleyt.png" type="Texture" id=3]
[ext_resource path="res://Asset/diot.png" type="Texture" id=4]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0
bounce = 1.0

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.972727 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.44848, 0.0, 0, 0 ]

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.8, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.0749465, 0.605505, 0.955032, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "bullet_animation"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 720.0 ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 18.0

[node name="Bullet" type="RigidBody2D"]
physics_material_override = SubResource( 2 )
linear_damp = 0.5
script = ExtResource( 2 )

[node name="BulletParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 256
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 12.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
damping = 0.25
scale_amount = 4.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 4 )
color = Color( 1, 0.447059, 0, 1 )

[node name="FireParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 1, 0.701961, 0, 1 )
amount = 1024
lifetime = 0.25
local_coords = false
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 64.0
initial_velocity_random = 1.0
tangential_accel = 100.0
tangential_accel_random = 1.0
damping = 2.0
scale_amount = 0.03
scale_amount_curve = SubResource( 7 )
color_ramp = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../BulletCircle")
autoplay = "bullet_animation"
anims/RESET = SubResource( 5 )
anims/bullet_animation = SubResource( 6 )

[node name="BulletCircle" type="Sprite" parent="."]
position = Vector2( 0, 1.43051e-06 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="DestructTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CheckArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckArea2D"]
shape = SubResource( 3 )

[node name="Aura" type="Sprite" parent="CheckArea2D"]
visible = false
self_modulate = Color( 1, 0, 0, 0.117647 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[connection signal="timeout" from="DestructTimer" to="." method="_on_DestructTimer_timeout"]
[connection signal="body_entered" from="CheckArea2D" to="." method="_on_CheckArea2D_body_entered"]
